DecafParser.py
# Generated from .\Decaf.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'CHAR'", 
                     "'boolean'", "'void'", "'('", "','", "')'", "'if'", 
                     "'else'", "'while'", "'return'", "'='", "'.'", "'-'", 
                     "'!'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'*'", "'/'", "'%'", "'+'", "'&&'", "'||'", "'''", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUM", 
                      "CHAR", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_varType = 4
    RULE_methodDeclaration = 5
    RULE_methodType = 6
    RULE_parameter = 7
    RULE_parameterType = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_location = 11
    RULE_expression = 12
    RULE_methodCall = 13
    RULE_rel_op = 14
    RULE_eq_op = 15
    RULE_arith_op_fifth = 16
    RULE_arith_op_fourth = 17
    RULE_arith_op_third = 18
    RULE_arith_op_second = 19
    RULE_arith_op_first = 20
    RULE_literal = 21
    RULE_int_literal = 22
    RULE_char_literal = 23
    RULE_bool_literal = 24

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methodDeclaration", "methodType", "parameter", 
                   "parameterType", "block", "statement", "location", "expression", 
                   "methodCall", "rel_op", "eq_op", "arith_op_fifth", "arith_op_fourth", 
                   "arith_op_third", "arith_op_second", "arith_op_first", 
                   "literal", "int_literal", "char_literal", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    ID=39
    NUM=40
    CHAR=41
    WHITESPACE=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(DecafParser.T__0)
            self.state = 51
            self.match(DecafParser.T__1)
            self.state = 52
            self.match(DecafParser.T__2)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 53
                self.declaration()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(DecafParser.VarDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(DecafParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = DecafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.varDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(DecafParser.VarTypeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def NUM(self):
            return self.getToken(DecafParser.NUM, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = DecafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.varType()
                self.state = 67
                self.match(DecafParser.ID)
                self.state = 68
                self.match(DecafParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.varType()
                self.state = 71
                self.match(DecafParser.ID)
                self.state = 72
                self.match(DecafParser.T__5)
                self.state = 73
                self.match(DecafParser.NUM)
                self.state = 74
                self.match(DecafParser.T__6)
                self.state = 75
                self.match(DecafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)




    def structDeclaration(self):

        localctx = DecafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DecafParser.T__7)
            self.state = 80
            self.match(DecafParser.ID)
            self.state = 81
            self.match(DecafParser.T__2)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 82
                self.varDeclaration()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_varType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class STRUCT_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTRUCT_VARTYPE" ):
                listener.enterSTRUCT_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTRUCT_VARTYPE" ):
                listener.exitSTRUCT_VARTYPE(self)


    class STRUCTDECLARATION_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTRUCTDECLARATION_VARTYPE" ):
                listener.enterSTRUCTDECLARATION_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTRUCTDECLARATION_VARTYPE" ):
                listener.exitSTRUCTDECLARATION_VARTYPE(self)


    class BOOL_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBOOL_VARTYPE" ):
                listener.enterBOOL_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBOOL_VARTYPE" ):
                listener.exitBOOL_VARTYPE(self)


    class CHAR_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCHAR_VARTYPE" ):
                listener.enterCHAR_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCHAR_VARTYPE" ):
                listener.exitCHAR_VARTYPE(self)


    class INT_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINT_VARTYPE" ):
                listener.enterINT_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINT_VARTYPE" ):
                listener.exitINT_VARTYPE(self)


    class VOID_VARTYPEContext(VarTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVOID_VARTYPE" ):
                listener.enterVOID_VARTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVOID_VARTYPE" ):
                listener.exitVOID_VARTYPE(self)



    def varType(self):

        localctx = DecafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = DecafParser.INT_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(DecafParser.T__8)
                pass

            elif la_ == 2:
                localctx = DecafParser.CHAR_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(DecafParser.T__9)
                pass

            elif la_ == 3:
                localctx = DecafParser.BOOL_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(DecafParser.T__10)
                pass

            elif la_ == 4:
                localctx = DecafParser.STRUCT_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(DecafParser.T__7)
                self.state = 94
                self.match(DecafParser.ID)
                pass

            elif la_ == 5:
                localctx = DecafParser.STRUCTDECLARATION_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.structDeclaration()
                pass

            elif la_ == 6:
                localctx = DecafParser.VOID_VARTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.match(DecafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodType(self):
            return self.getTypedRuleContext(DecafParser.MethodTypeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = DecafParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.methodType()
            self.state = 100
            self.match(DecafParser.ID)
            self.state = 101
            self.match(DecafParser.T__12)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0):
                self.state = 102
                self.parameter()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.T__13:
                    self.state = 103
                    self.match(DecafParser.T__13)
                    self.state = 104
                    self.parameter()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(DecafParser.T__14)
            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_methodType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VOID_METHODTYPEContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVOID_METHODTYPE" ):
                listener.enterVOID_METHODTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVOID_METHODTYPE" ):
                listener.exitVOID_METHODTYPE(self)


    class CHAR_METHODTYPEContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCHAR_METHODTYPE" ):
                listener.enterCHAR_METHODTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCHAR_METHODTYPE" ):
                listener.exitCHAR_METHODTYPE(self)


    class BOOL_METHODTYPEContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBOOL_METHODTYPE" ):
                listener.enterBOOL_METHODTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBOOL_METHODTYPE" ):
                listener.exitBOOL_METHODTYPE(self)


    class INT_METHODTYPEContext(MethodTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINT_METHODTYPE" ):
                listener.enterINT_METHODTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINT_METHODTYPE" ):
                listener.exitINT_METHODTYPE(self)



    def methodType(self):

        localctx = DecafParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodType)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.T__8]:
                localctx = DecafParser.INT_METHODTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(DecafParser.T__8)
                pass
            elif token in [DecafParser.T__9]:
                localctx = DecafParser.CHAR_METHODTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(DecafParser.T__9)
                pass
            elif token in [DecafParser.T__10]:
                localctx = DecafParser.BOOL_METHODTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(DecafParser.T__10)
                pass
            elif token in [DecafParser.T__11]:
                localctx = DecafParser.VOID_METHODTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(DecafParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterType(self):
            return self.getTypedRuleContext(DecafParser.ParameterTypeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = DecafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.parameterType()
                self.state = 125
                self.match(DecafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.parameterType()
                self.state = 128
                self.match(DecafParser.ID)
                self.state = 129
                self.match(DecafParser.T__5)
                self.state = 130
                self.match(DecafParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_parameterType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType" ):
                listener.enterParameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType" ):
                listener.exitParameterType(self)




    def parameterType(self):

        localctx = DecafParser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(DecafParser.T__2)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 137
                self.varDeclaration()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__2) | (1 << DecafParser.T__4) | (1 << DecafParser.T__12) | (1 << DecafParser.T__15) | (1 << DecafParser.T__17) | (1 << DecafParser.T__18) | (1 << DecafParser.T__21) | (1 << DecafParser.T__22) | (1 << DecafParser.T__35) | (1 << DecafParser.T__36) | (1 << DecafParser.T__37) | (1 << DecafParser.ID) | (1 << DecafParser.NUM))) != 0):
                self.state = 143
                self.statement()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatementIFContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementIF" ):
                listener.enterStatementIF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementIF" ):
                listener.exitStatementIF(self)


    class StatementMETHODCALLContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodCall(self):
            return self.getTypedRuleContext(DecafParser.MethodCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementMETHODCALL" ):
                listener.enterStatementMETHODCALL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementMETHODCALL" ):
                listener.exitStatementMETHODCALL(self)


    class StatementLOCATIONContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementLOCATION" ):
                listener.enterStatementLOCATION(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementLOCATION" ):
                listener.exitStatementLOCATION(self)


    class StatementRETURNContext(StatementContext):
